--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,19 @@
 {
     "type": "project",
     "license": "proprietary",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2.17",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "4.2.*",
-        "symfony/dotenv": "4.2.*",
+        "symfony/console": "^4.2",
+        "symfony/dotenv": "^4.2",
         "symfony/flex": "^1.1",
-        "symfony/framework-bundle": "4.2.*",
-        "symfony/yaml": "4.2.*"
+        "symfony/framework-bundle": "^4.2",
+        "symfony/http-client": "^4.3",
+        "symfony/web-server-bundle": "^4.2",
+        "symfony/yaml": "^4.2"
     },
     "config": {
         "preferred-install": {
@@ -53,7 +57,11 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.2.*"
+            "require": "^4.2"
         }
+    },
+    "require-dev": {
+        "fabpot/php-cs-fixer": "^2.15",
+        "symfony/test-pack": "^1.0"
     }
 }
